--- a/css/style.css
+++ b/css/style.css
@@ -179,8 +179,7 @@ color: brown;
 
 .index-p4 {
 line-height: 1.3em;
- font-size: 1.2em; 
-}
+font-size: 1.1em;}
 
 .index-p5 {
   font-size: 1.1em;
