--- a/css/style.css
+++ b/css/style.css
@@ -185,3 +185,13 @@ font-size: 1.1em;}
   font-size: 1.1em;
   line-height: 1.3em;
 }
+
+.index-p6 {
+  font-size: 1.4em;
+  line-height: 1.4em;
+}
+
+
+
+
+
