--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,12 @@ font-size: 1.1em;}
   text-align: justify;
 }
 
+.index-p7 {
+  font-size: 1.2.5em;
+  line-height: 1.3em;
+  text-align: justify;
+}
+
 
 
 
