--- a/css/style.css
+++ b/css/style.css
@@ -206,6 +206,13 @@ line-height: 1.3em;
 line-height: 1.4em;
 }
 
+.index-p10 {
+  text-align: justify;
+  font-size: 1.4em;
+line-height: 1.3em;
+}
+
+
 
 
 
