--- a/css/style.css
+++ b/css/style.css
@@ -227,4 +227,10 @@ line-height: 1.3em;
 line-height: 1.3em;
 }
 
+.index-p14 {
+font-size: 1.3.5em;
+line-height: 1.4em;
+text-align: justify;
+}
+
 
