--- a/css/style.css
+++ b/css/style.css
@@ -233,4 +233,35 @@ line-height: 1.4em;
 text-align: justify;
 }
 
+.index-p15 {
+font-size: 1.5em;
+  letter-spacing: 0.01em;
+    line-height: 1.6em;
+  
+
+}
+
+
+.index-p16 {
+font-size: 1.3em;
+  letter-spacing: 0.01em;
+    line-height: 1.5em;
+  }
+
+.index-p17 {
+font-size: 1.2.5em;
+  letter-spacing: 0.01em;
+    line-height: 1.4em;
+  }
+
+  .index-18 {
+font-size: 2em;
+  letter-spacing: 0.01em;
+    line-height: 1.4em;
+
+  }
+
+
+
+
 
