--- a/css/style.css
+++ b/css/style.css
@@ -117,8 +117,8 @@ p {
 }
 
 .index-p3 {
-  font-size: 1.2em;
-line-height: 1.4em;
+  font-size: 1.3em;
+line-height: 1.3em;
 }
 
 nav ul li.active {
@@ -178,8 +178,12 @@ color: brown;
   color: rgb(#0000);
 }
 
+.titoli {
+  font-size: 1.5em;
+}
+
 .index-p4 {
-line-height: 1.5em;
+line-height: 1.4em;
 font-size: 1.1em;}
 
 .index-p5 {
@@ -190,10 +194,13 @@ font-size: 1.1em;}
 .index-p6 {
   font-size: 1.4em;
   line-height: 1.4em;
+  text-align: justify;
 }
 
 .index-p7 {
-text-align: justify;
+  font-size: 1.2.5em;
+  line-height: 1.3em;
+  text-align: justify;
 }
 
 .index-p8 {
@@ -223,7 +230,7 @@ line-height: 1.3em;
 }
 
 .index-p13 {
-  font-size: 1.3.3em;
+  font-size: 1.3.5em;
 line-height: 1.3em;
 }
 
@@ -232,6 +239,7 @@ font-size: 1.3.5em;
 line-height: 1.4em;
 text-align: justify;
 }
+
 
 .index-p15 {
 font-size: 1.2em;
@@ -255,19 +263,44 @@ font-size: 1em;
   }
 
   .index-18 {
-font-size: 2em;
+font-size: 1.2.3em;
   letter-spacing: 0.01em;
-    line-height: 1.4em;
+    line-height: 1.3.2em;
 
   }
 
-.index-19 {
-font-size: 1.2em;
+  .index-19 {
+font-size: 1.3em;
   letter-spacing: 0.01em;
-    line-height: 1.4em; }
+    line-height: 1.4em;
+
+}
 
 .index-p20 {
   text-align: right;
  
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
